# PhysicsEngine3D

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  run.bat  run.sh
.cache/clangd/index/: camera.cpp.998DF2AE8124E028.idx  camera.h.43A81F0EBD6FD797.idx  file_manager.cpp.DF24747844DF20DC.idx  file_manager.h.BEC316941419AA0B.idx  imgui_impl_glfw.cpp.7883A06ED2A86FC6.idx  imgui_impl_glfw.h.0B26CD5C5B752C84.idx  imgui_impl_opengl3.cpp.0B72F73DDDED4074.idx  imgui_impl_opengl3.h.7F1253F0C306DF97.idx  imgui_impl_opengl3_loader.h.CB986CBF60E7BA5A.idx  imgui_window.cpp.299C77172BAE3500.idx  imgui_window.h.B4CECF9F2B98A665.idx  input.cpp.6B4654FDAAE48519.idx  input.h.867F5D3965429CB2.idx  main.cpp.58F258E5C0D37DF5.idx  settings.h.F163E096F528D542.idx  shader.cpp.7A52D75760F2CEFE.idx  shader.h.67FA9FF885E40C32.idx
sandbox/engine/: engine.h  game.h
sandbox/user/scripts/: example.cpp  game.cpp  settings.h
sandbox/user/shaders/: wave.fs
src/: engine_settings.h  main.cpp  settings.h
src/camera/: camera.cpp  camera.h
src/file_manager/: file_manager.cpp  file_manager.h
src/imgui/: imgui_window.cpp  imgui_window.h
src/input/: input.cpp  input.h
src/shader/: shader.cpp  shader.h
src/shaders/: simple.fs  simple.vs  skybox.fs  skybox.vs
